# libmovie

./: .bettercodehub.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml  format.txt  sonar-project.properties
cmake/Modules/: FindLibMovie.cmake
doxygen/: Doxyfile  doxy-groups.h  doxy-mainpage.h
example/sandbox/: test1.c
examples/: CMakeLists.txt
examples/cocos2d-x/: CMakeLists.txt
examples/cocos2d-x/example/Classes/: AppDelegate.cpp  HelloWorldScene.cpp
examples/cocos2d-x/example/Resources/: knight.plist
examples/cocos2d-x/example/Resources/AEM/Knight/: Knight.aem
examples/cocos2d-x/example/Resources/Shaders/AEM/: AEM_TrackMatte.fsh  AEM_TrackMatte.vsh
examples/cocos2d-x/example/proj.ios_mac/mac/: Info.plist
examples/cocos2d-x/example/proj.win32/: LibMovieCocos.sln
examples/examples/: common.c  common.h  example1.c  example2.c  example3.c
examples/resources/Bridge/: Bridge.aem
examples/resources/Knight/: Knight.aem
examples/resources/Peacock/: Peacock.aem
examples/resources/Unicorn/: Unicorn.aem
examples/resources/ui/: ui.aem
examples/sandbox/: sandbox.c  test1.c
examples/test/: common.c  common.h  test1.c  test2.c  test3.c
export/: README.md  libMovieExport.jsx
export/scripts/: ae_movie_export_sound.bat  ae_movie_projects_script.bat
frameworks/cocos2d-x/: AEMovie.cpp  AEMovie.h  AEMovieCache.cpp  AEMovieData.cpp  AERenderData.h  AESlotNode.cpp  AESlotNode.h  AESound.h  AESoundNode.cpp  CMakeLists.txt  README.md
frameworks/cocos2d-x/example/Classes/: HelloWorldScene.cpp  HelloWorldScene.h  movie_hash.h
frameworks/cocos2d-x/example/Resources/: knight.plist  ui.plist
frameworks/cocos2d-x/example/Resources/Shaders/AEM/: AEM_Normal.fsh  AEM_Normal.vsh  AEM_TrackMatte.fsh  AEM_TrackMatte.vsh
frameworks/cocos2d-x/example/proj.ios_mac/LibMovieCocos.xcodeproj/: project.pbxproj
frameworks/cocos2d-x/example/proj.ios_mac/ios/: Info.plist
frameworks/cocos2d-x/example/proj.win32/: LibMovieCocos.vcxproj
frameworks/cocos2d-x/src/: AEConfig.h  AEMovie.cpp  AEMovie.h  AEMovieCache.cpp  AEMovieCache.h  AEMovieData.cpp  AEMovieData.h  AERenderData.h  AESlotNode.cpp  AESlotNode.h  AESound.cpp  AESound.h  AESoundNode.cpp  AESoundNode.h  AETrackMatteData.cpp  AETrackMatteData.h  AETrackMatteNode.cpp  AETrackMatteNode.h
frameworks/emscripten/: CMakeLists.txt  em_libmovie.js  em_libmovie_post.js  em_math.h  em_movieplayer.c  em_movieplayer.h  em_opengles.h  em_test.js  em_typedef.h  embuild.bat  site.bat  site.html
frameworks/emscripten/site/: em_test.js  site.html
frameworks/emscripten/src/: em_libmovie_post.js  em_math.h  em_memory.h  em_movieplayer.c  em_movieplayer.h  em_opengles.h  em_typedef.h
include/movie/: movie.h  movie.hpp  movie_composition.h  movie_config.h  movie_data.h  movie_instance.h  movie_node.h  movie_providers.h  movie_render.h  movie_resource.h  movie_skeleton.h  movie_type.h  movie_typedef.h  movie_version.h  type.h
solution/: libmovie.sln  libmovie.vcxproj  sandbox.vcxproj
src/: math.c  math.h  matrix.c  matrix.h  memory.c  memory.h  movie.c  movie_bezier.c  movie_bezier.h  movie_composition.c  movie_data.c  movie_debug.h  movie_detail.h  movie_instance.c  movie_math.c  movie_math.h  movie_memory.h  movie_node.c  movie_property.c  movie_property.h  movie_providers.c  movie_skeleton.c  movie_stream.c  movie_stream.h  movie_struct.h  movie_transformation.c  movie_transformation.h  movie_utils.c  movie_utils.h  movie_version.h  stream.h  utils.c  utils.h
tests/: CMakeLists.txt  test_compute_movie_mesh.c  test_create.c  test_create_movie_composition.c  test_create_movie_data.c  test_create_movie_instance.c  test_create_movie_stream.c  test_load_movie_data.c  test_memory_leak.c  test_update_movie_composition.c
tools/: movie_data.py  test.py
tools/movie/: movie_composition_data.py  movie_data.py  movie_layer_data.py  movie_resource.py  movie_stream.py  movie_type.py
tools/moview/: .gitignore  .travis.yml  CMakeLists.txt  README.md
tools/moview/cmake/: CMakeLists_imgui.txt  CMakeLists_nativefiledialog.txt  alsoft_download.cmake  glad_download.cmake  glfw_download.cmake  imgui_download.cmake  inih_download.cmake  macro.cmake  nativefiledialog_download.cmake  stb_image_download.cmake  stb_libs_download.cmake  tinyini_download.cmake
tools/moview/src/: Composition.cpp  Composition.h  Logger.h  Movie.cpp  Movie.h  Platform.cpp  Platform.h  ResourcesManager.cpp  ResourcesManager.h  Singleton.h  Sound.cpp  Sound.h  Viewer.cpp  Viewer.h  main.cpp  moview.rc
tools/pymovie/: test.py
tools/pymovie/movie/: __init__.py  movie_composition_data.py  movie_data.py  movie_layer_data.py  movie_resource.py  movie_stream.py  movie_type.py
